@@ -1,3 +1,12 @@
+2003-01-16  Miguel Sofer  <msofer@users.sf.net>
+
+	* tkvnc.tcl (RawEncoding): slightly faster option
+	* tkvnc.tcl: fixed CopyRect, RRE and Hextile encodings. 
+	* tkvnc.tcl (SolidBlockFill): removed, replaced with direct
+	invocation of $SCREEN
+	* tkvnc.tcl (FillOutPixelCache): Changed color rescaling (too
+	dark) 
+
 2003-01-15  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkvnc.tcl (UpdateUI): Change 'all' bindings to ROOT to not
